# Fina_Thesis

./: README.md  build.gradle  settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  blazefacencnn-dev.cpp  blazefacencnn.cpp
app/src/main/cpp/Face_detection/: face.cpp  face.h  landmark.cpp  landmark.h  ndkcamera.cpp
app/src/main/java/com/vyw/tflite/: About.kt  CameraStarter.kt  Developer.kt  MainActivity.kt  Settings_Main.kt
app/src/main/java/com/vyw/tflite/algorithm/: BlazeFaceNcnn.kt  BlazeFaceNcnnCalibrate.kt  BlazeFaceNcnnDev.kt
app/src/main/res/drawable/: cut_card_background.xml  dialog_border.xml  embossed_button_background.xml  gradient.xml  ic_baseline_library_music_24.xml  ic_baseline_person_search_24.xml  rectangle.xml  rounded_corner.xml  view_pager_background.xml
app/src/main/res/layout/: activity_about.xml  activity_calibrate.xml  activity_camera_permission.xml  activity_camera_placement.xml  activity_camera_starter.xml  activity_contacts_permission.xml  activity_developer.xml  activity_face_calibrator.xml  activity_location_permission.xml  activity_main.xml  activity_maps.xml  activity_onboarding.xml  activity_settings.xml  activity_splash.xml  dialog_alert1.xml  dialog_alert2.xml  dialog_alert3.xml  fragment_map.xml  itemcontainerfinal.xml  sign.xml  toolbar.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  preloaded_fonts.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
